@@ -1,6 +1,7 @@
 48
 ================
 
+10/01/24 If entry type is disabled for add/edit, guess from other fields #1378
 09/01/24 Clear img link parse results between each PDF generation
 09/01/24 Remove unsupported "Insert Template" in TinyMCE
 09/01/24 Calendar: diary items open correct screen and edit click note #1401
